@@ -1,0 +1,54 @@
+<?xml version="1.0" ?>
+<!--
+
+  This file is part of Bakefile (http://www.bakefile.org)
+
+  Copyright (C) 2006-2007 Vaclav Slavik, Kevin Powell, Steven Van Ingelgem,
+                          Kevin Ollivier, Aleksander Jaromin
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+
+  $Id$
+
+-->
+<makefile>
+    
+    <!-- VS2003 didn't support multiple target platforms like VS2005; see
+         msvs2005prj.bkl for the full version of this: -->
+    <set var="MSVS_PLATFORMS">win32</set>
+    <set var="MSVS_PLATFORMS_DESC">Win32</set>
+    
+    <set var="_default_builddir">
+        $(DOLLAR)(SolutionDir)$(DOLLAR)(ConfigurationName)
+    </set>
+
+    <!-- empty; again, see msvs2005prj.bkl for why is it needed at all: -->
+    <template id="_compiled_baset"/>
+
+    
+    <!-- ============================================================== -->
+    <!--    Set format-specific settings and call common MSVC code:     -->
+    <!-- ============================================================== -->
+
+    <set var="_MSVS_VCPROJ_VERSION">7.10</set>
+    <set var="_MSVS_SLN_VERSION">8.00</set>
+
+    <include file="msvs200xprj.bkl"/>
+
+</makefile>
