@@ -6,6 +6,8 @@
 - msvc6prj: use /pdb linker option to make the projects work when imported
   in MSVC7.1 (Scott Bailey, patch #1732354)
 - msvs2005prj: added support for Pocket PC platform
+- added support for MSVS2003 project files (based on patch by
+  Aleksander Jaromin)
 
 
 Version 0.2.2
